package com.fanggadewangga.noteit.core

object TestTags {
    const val ORDER_SECTION_TEST_TAG = "ORDER_SECTION_TEST_TAG"
    const val TITLE_TEXT_FIELD_TEST_TAG = "TITLE_TEXT_FIELD_TEST_TAG "
    const val CONTENT_TEXT_FIELD_TEST_TAG = "CONTENT_TEXT_FIELD_TEST_TAG"
    const val NOTE_ITEM_TEST_TAG = "NOTE_ITEM_TEST_TAG"

}